# safari-bingo-cards

./: .gitignore  LICENSE  README.md  animals.csv  generate.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: animals.csv
