[project]
name = "safari-bingo-cards"
version = "0.1.0"
description = "Generate random wildlife bingo cards for safaris with data from Wikipedia."
authors = [
    { name = "Alan Orth", email = "alan.orth@gmail.com" }
]
license= { file = "LICENSE" }
dependencies = [
    "colorama~=0.4.6",
    "pandas~=2.2.2",
    "requests~=2.32.3",
    "pyvips~=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
generate = "safari_bingo_cards:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "isort~=5.13.2",
    "ipython~=8.25.0",
]

[tool.hatch.metadata]
allow-direct-references = true
