[project]
name = "safari-bingo-cards"
version = "0.1.0"
description = "Generate random wildlife bingo cards for safaris with data from Wikipedia."
authors = [
    { name = "Alan Orth", email = "alan.orth@gmail.com" }
]
license= { file = "LICENSE" }
dependencies = [
    "colorama~=0.4.6",
    "pandas~=2.3.1",
    "requests~=2.32.3",
    "pyvips~=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv]
dev-dependencies = [
    "isort~=6.0.1",
    "ipython~=8.37.0",
]

[tool.isort]
profile = "black"
line_length=88
